# bevy-snake

./: Cargo.toml  README.md
bots/: README.md
crates/swarm-core/: Cargo.toml
crates/swarm-core/src/: bots.rs  lib.rs  simulation.rs
crates/swarm-runner/: Cargo.toml  README.md
crates/swarm-runner/src/: lib.rs
docs/: architecture.md  bot-api.md
src/: main.rs  simulation.rs
src/bots/: mod.rs  my_bot.rs
