[package]
name = "swarm-space"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.19.0"
swarm-core = { path = "crates/swarm-core" }

[workspace]
members = [".", "crates/swarm-core"]

# ICU4X 2.2 logs a false warning for CJK while its line-breaker deliberately
# falls back to Unicode's normal CJK rules. Keep the one-line upstream hotfix
# local until the dependency publishes it.
[patch.crates-io]
icu_segmenter = { path = "vendor/icu_segmenter" }
